--- a/Birthdate/Burcask.html
+++ b/Birthdate/Burcask.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 	<title> Doğum günü </title>
-	<link rel = "stylesheet" type = "text/css" href = "Burçaşkcss.css"/>
+	<script src = "burcask.js"> </script>
+	<link rel = "stylesheet" type = "text/css" href = "Burcaskcss.css"/>
 	
 </head>
 <body>
@@ -13,18 +14,18 @@
 	</div>
 	
 	<div id = "centered">
-		<img src = " " alt = "Dünyanın en güzel kızının fotoğrafı">
+		<img id = "photo" src = " " alt = "Dünyanın en güzel kızının fotoğrafı">
 	</div>
 	
 	<div id = "centered">
-		<button> Seni seviyorum </button>
+		<button onclick = "change_photo()"> Seni seviyorum </button>
 	</div>
 	<hr>
 	<div id = "centered">
 		<p id = "b"> Bakınca sana her şey doğal,</p>
 		<p id = "u"> Uykumda bile benimle kal,</p>
 		<p id = "r"> Rüya mı bu ya da bir masal,</p>
-		<p id = "ç"> Çocuklar gibi kurarım hayal,</p>
+		<p id = "c"> Çocuklar gibi kurarım hayal,</p>
 		<p id = "a"> Aşık mı diye bakarım fal,</p>
 		<p id = "k"> Kalbime işlerdi gülüşün derhal</p>
 	</div>
