--- a/Birthdate/Burcask.html
+++ b/Birthdate/Burcask.html
@@ -18,7 +18,8 @@
 	</div>
 	
 	<div id = "centered">
-		<button onclick = "change_photo()"> Seni seviyorum </button>
+		<button onclick = "change_photo()" id = "button"> Senii çoooooooooooook seviyorummmm <3 </button>
+		<p id = "btnyanı"> </p>
 	</div>
 	<hr>
 	<div id = "centered">
